; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet/extr_in_rss.c_rss_hash_ip4_2tuple.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet/extr_in_rss.c_rss_hash_ip4_2tuple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in_addr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rss_hash_ip4_2tuple(i32 %0, i32 %1) #0 {
  %3 = alloca %struct.in_addr, align 4
  %4 = alloca %struct.in_addr, align 4
  %5 = alloca [8 x i32], align 16
  %6 = alloca i64, align 8
  %7 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %3, i32 0, i32 0
  store i32 %0, i32* %7, align 4
  %8 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %4, i32 0, i32 0
  store i32 %1, i32* %8, align 4
  store i64 0, i64* %6, align 8
  %9 = load i64, i64* %6, align 8
  %10 = getelementptr inbounds [8 x i32], [8 x i32]* %5, i64 0, i64 %9
  %11 = call i32 @bcopy(%struct.in_addr* %3, i32* %10, i32 4)
  %12 = load i64, i64* %6, align 8
  %13 = add i64 %12, 4
  store i64 %13, i64* %6, align 8
  %14 = load i64, i64* %6, align 8
  %15 = getelementptr inbounds [8 x i32], [8 x i32]* %5, i64 0, i64 %14
  %16 = call i32 @bcopy(%struct.in_addr* %4, i32* %15, i32 4)
  %17 = load i64, i64* %6, align 8
  %18 = add i64 %17, 4
  store i64 %18, i64* %6, align 8
  %19 = load i64, i64* %6, align 8
  %20 = getelementptr inbounds [8 x i32], [8 x i32]* %5, i64 0, i64 0
  %21 = call i32 @rss_hash(i64 %19, i32* %20)
  ret i32 %21
}

declare dso_local i32 @bcopy(%struct.in_addr*, i32*, i32) #1

declare dso_local i32 @rss_hash(i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
